<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8e6bc"
    tools:context=".SightseeingActivity">

  <LinearLayout
      android:id="@+id/parentLinearLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:visibility="visible"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

  <LinearLayout
      android:id="@+id/LinearLayout"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:background="@drawable/sight"
      android:elevation="5dp"
      android:orientation="horizontal"
      android:padding="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="Sightseeing"
        android:textAlignment="center"
        android:textColor="#F3F4F8"
        android:textSize="40sp"
        android:textStyle="bold" />

  </LinearLayout>

    <LinearLayout
        android:id="@+id/firstLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#f5d146"
        android:elevation="5dp"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout">

      <TextView
          android:id="@+id/counterView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:layout_weight="1"
          android:text="1/7"
          android:textAlignment="center"
          android:textColor="#F3F4F8"
          android:textSize="24sp"
          android:textStyle="bold" />

    </LinearLayout>

    <!-- Quiz Layout -->
    <LinearLayout
        android:id="@+id/quizLayout"
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstLinearLayout"
        android:layout_marginTop="30dp"
        android:padding="16dp">

      <TextView
          android:id="@+id/textViewQuestion"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text="Quiz Question"
          android:textColor="#23221a"
          android:textSize="18sp"
          android:textStyle="bold" />

      <!-- Options for Quiz -->
      <RadioGroup
          android:id="@+id/radioGroup"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioButtonOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option 1"
            android:buttonTint="#c8a742" />

        <RadioButton
            android:id="@+id/radioButtonOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#c8a742"
            android:text="Option 2"/>

        <RadioButton
            android:id="@+id/radioButtonOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option 3"
            android:buttonTint="#c8a742" />

        <RadioButton
            android:id="@+id/radioButtonOption4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#c8a742"
            android:text="Option 4"/>
      </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="140dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#f5d146">

      <ImageButton
          android:id="@+id/buttonPrevious"
          android:layout_width="wrap_content"
          android:layout_height="60dp"
          android:layout_weight="1"
          android:backgroundTint="#f5d146"
          android:scaleType="centerInside"
          app:srcCompat="@drawable/ic_arrow_back" />

      <ImageButton
          android:id="@+id/buttonNext"
          android:layout_width="wrap_content"
          android:layout_height="60dp"
          android:layout_weight="1"
          android:backgroundTint="#f5d146"
          android:scaleType="centerInside"
          app:srcCompat="@drawable/ic_arrow_forward" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:elevation="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/secondLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#c8a742">

      <Button
          android:id="@+id/buttonSubmit"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:backgroundTint="#c8a742"
          android:text="Submit"
          android:textColor="#23221a"
          android:textSize="18sp"
          android:textStyle="bold" />
    </LinearLayout>
  </LinearLayout>

  <View
      android:id="@+id/backgroundBlurView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      android:background="#C0000000"/> <!-- Semi-transparent black color -->

  <androidx.cardview.widget.CardView
      android:id="@+id/resultCardView"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="100dp"
      android:backgroundTint="#f5d146"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:visibility="gone"
      app:cardCornerRadius="8dp"
      app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="end">

        <ImageButton
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
      </LinearLayout>

      <TextView
          android:id="@+id/textViewScore"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="Your Score: 5/7"
          android:textAlignment="center"
          android:textColor="#23221a"
          android:textSize="18sp"
          android:textStyle="bold" />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/resultRecyclerView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="16dp"/>

    </LinearLayout>
  </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
